--- a/src/components/About.css
+++ b/src/components/About.css
@@ -18,7 +18,7 @@
 }
 
 .highlight {
-    text-decoration: 6px underline #ffd000;
+    text-decoration: 6px underline #ADC651;
 }
 
 .about .up .description {
